2014-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_class_init):
	Small enhancement to property description.

2014-04-28  Xavi Artigas  <xartigas@fluendo.com>

	* configure.ac:
	* src/Makefile.am:
	Prepare for Pango support.

2014-04-25  Xavi Artigas  <xartigas@fluendo.com>

	* src/Makefile.am:
	* src/fluttml.c: (plugin_init):
	* src/gstttmlrender.c: (gst_ttmlrender_gen_buffer),
	(gst_ttmlrender_class_init), (gst_ttmlrender_init):
	* src/gstttmlrender.h:
	Skeleton for ttmlrender element.

2014-04-25  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_handle_event),
	(gst_ttmlbase_get_type):
	Fix build for 1.0

2014-04-25  Xavi Artigas  <xartigas@fluendo.com>

	* src/Makefile.am:
	Updated Makefile for new file.

2014-04-25  Xavi Artigas  <xartigas@fluendo.com>

	* src/fluttml.c: (plugin_init):
	* src/gstttmlattribute.c:
	* src/gstttmlbase.c: (gst_event_new_new_segment),
	(gst_event_parse_new_segment), (gst_segment_set_newsegment),
	(gst_ttmlbase_gen_buffer), (gst_ttmlbase_parse_event),
	(gst_ttmlbase_add_characters), (gst_ttmlbase_push_attr),
	(gst_ttmlbase_sax2_element_start_ns),
	(gst_ttmlbase_sax2_element_end_ns), (gst_ttmlbase_sax_characters),
	(gst_ttmlbase_sax_warning), (gst_ttmlbase_sax_error),
	(gst_ttmlbase_sax_comment), (gst_ttmlbase_sax_get_entity),
	(gst_ttmlbase_sax_document_start), (gst_ttmlbase_sax_document_end),
	(gst_ttmlbase_reset), (gst_ttmlbase_handle_buffer),
	(gst_ttmlbase_cleanup), (gst_ttmlbase_handle_event),
	(gst_ttmlbase_chain), (gst_ttmlbase_sink_event),
	(gst_ttmlbase_change_state), (gst_ttmlbase_get_property),
	(gst_ttmlbase_set_property), (gst_ttmlbase_dispose),
	(gst_ttmlbase_class_init), (gst_ttmlbase_init),
	(gst_ttmlbase_get_type):
	* src/gstttmlbase.h:
	* src/gstttmlevent.c:
	* src/gstttmlparse.c: (gst_ttmlparse_gen_buffer),
	(gst_ttmlparse_class_init), (gst_ttmlparse_init):
	* src/gstttmlparse.h:
	* src/gstttmlspan.c:
	* src/gstttmlstate.c:
	* src/gstttmlstyle.c: