@@ -1,5 +1,17 @@
 2014-04-29  Xavi Artigas  <xartigas@fluendo.com>
 
+	* src/gstttmlbase.c: (gst_ttmlbase_downstream_negotiation),
+	(gst_ttmlbase_handle_buffer), (gst_ttmlbase_handle_event):
+	* src/gstttmlbase.h:
+	* src/gstttmlrender.c: (gst_ttmlrender_fixate_caps),
+	(gst_ttmlrender_setcaps), (gst_ttmlrender_class_init),
+	(gst_ttmlrender_init):
+	* src/gstttmlrender.h:
+	Add caps negotiation, for those derived classes like ttmlrender
+	which might need to agree on a frame size, for example.
+
+2014-04-29  Xavi Artigas  <xartigas@fluendo.com>
+
 	* src/gstttmlbase.c: (gst_ttmlbase_class_init):
 	Small enhancement to property description.
 
